# rBTC

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  dynamic-analysis.yml  fuzz.yml  public-network-smoke.yml  release.yml  signet-smoke.yml  storage-benchmark.yml
docs/: ARCHITECTURE.md  ROADMAP.md
fuzz/: Cargo.toml
fuzz/corpus/archive_decode/: valid-small.hex
fuzz/corpus/config_parsers/: minimum-chainwork  regtest-buried  regtest-vbparams
fuzz/corpus/explorer_request/: address-page  transaction
fuzz/corpus/local_rpc/: batch.json  unknown_fields.json  valid_help.json
fuzz/corpus/merkle_proof/: basic
fuzz/corpus/persisted_metadata/: unknown-field  valid-owner  valid-peer  valid-penalty
fuzz/corpus/signet_block/: signet-block-1.hex
fuzz/corpus/snapshot_decode/: valid-empty.hex
fuzz/corpus/wallet_auth/: valid  wrong-scheme
fuzz/corpus/wallet_descriptor/: unknown-field  valid-watch-only
fuzz/corpus/wallet_psbt/: finalize.json  unknown.json  valid.json
fuzz/dictionaries/: container.dict  p2p_v1.dict
fuzz/fuzz_targets/: archive_decode.rs  config_parsers.rs  explorer_request.rs  local_rpc.rs  merkle_proof.rs  p2p_decode_v1.rs  persisted_metadata.rs  signet_block.rs  snapshot_decode.rs  wallet_auth.rs  wallet_descriptor.rs  wallet_psbt.rs
scripts/: enrich-historical-utxos.py  public-network-sync-smoke.sh  run-fuzz-regression.sh  signet-sync-smoke.sh  verify-reproducible-build.sh
src/: api.rs  archive.rs  block_execution.rs  blockchain.rs  chain_store.rs  chainstate.rs  consensus.rs  deployments.rs  execution_store.rs  explorer_store.rs  fee_estimator.rs  header_store.rs  headers.rs  ibd.rs  ledger.rs  lib.rs  main.rs  mdbx_utxo.rs  merkle_proof.rs  p2p.rs  peer_store.rs  rebroadcast_store.rs  signet.rs  snapshot.rs  transaction_admission.rs  transaction_policy.rs  transaction_pool_store.rs  undo_store.rs  utxo.rs  validation_owner.rs  wallet.rs
tests/: core26_historical_anchors.rs  core26_historical_blocks.rs  core26_historical_full_blocks.rs  core26_historical_transactions.rs  core_block_differential.rs  core_consensus_vectors.rs  storage_bench.rs  storage_recovery.rs
tests/data/bitcoin-core-26/: README.md  authenticated-historical-transactions.json  mainnet-0000000000000000000687bca986194dc2c1f949318629b44bb54ec0a94d8244.utxos.json.zst  mainnet-0000000000000000000687bca986194dc2c1f949318629b44bb54ec0a94d8244.zst  mainnet-0000000000000000000f14c35b2d841e986ab5441de8c585d5ffe55ea1e395ad.utxos.json.zst  mainnet-0000000000000000000f14c35b2d841e986ab5441de8c585d5ffe55ea1e395ad.zst  mainnet-0000000000000000001c8018d9cb3b742ef25114f27563e3fc4a1902167f9893.utxos.json.zst  mainnet-0000000000000000001c8018d9cb3b742ef25114f27563e3fc4a1902167f9893.zst  mainnet-00000000000000000379eaa19dce8c9b722d46ae6a57c2f1a988119488b50931.hex  mainnet-000000000000000004a1b34462cb8aeebd5799177f7a29cf28f2d1961716b5b5.utxos.json.zst  mainnet-000000000000000004a1b34462cb8aeebd5799177f7a29cf28f2d1961716b5b5.zst  mainnet-000000000000000004c2b624ed5d7756c508d90fd0da2c7c679febfa6c4735f0.utxos.json.zst  mainnet-000000000000000004c2b624ed5d7756c508d90fd0da2c7c679febfa6c4735f0.zst  mainnet-000000000000024b89b42a942fe0d9fea3bb44ab7bd1b19115dd6a759c0808b8.zst.hex  mainnet-00000000000002dc756eebf4f49723ed8d30cc28a5f108eb94b1ba88ac4f9c22.hex  mainnet-00000000000743f190a18c5577a3c2d2a1f610ae9601ac046a38084ccb7cd721.hex  mainnet-00000000000a4d0a398161ffc163c503763b1f4360639393e0e4c8e300e0caec.hex  signet-block-1.hex
